<resources>
    <string name="app_name">Guinguette Click &amp; Collect</string>
    <string name="main_welcome">Bienvenue chez</string>
    <string name="main_title">La Guinguette</string>
    <string name="starter">ENTRÉES</string>
    <string name="main_course">PLATS</string>
    <string name="dessert">DESSERTS</string>
    <string name="starter_button">Entrées</string>
    <string name="main_course_button">Plats</string>
    <string name="dessert_button">Desserts</string>
    <string name="starter_title">Nos entrées</string>
    <string name="main_course_title">Nos plats</string>
    <string name="dessert_title">Nos déserts</string>
    <string name="dish_pic_description">Dish picture</string>
    <string name="dishName">Titre du plat</string>
    <string name="priceExample">10.90 €</string>
    <string name="arrowDescriptor">Fleche de navigation</string>
    <string name="basketTitle">Votre panier</string>
    <string name="multiplySymbol">×</string>
    <string name="removeButton">Bouton pour supprimer un plat</string>
    <string name="basketButton">Passer au paiement</string>
    <string name="register">Inscription</string>
    <string name="firstName">Prénom</string>
    <string name="lastName">Nom</string>
    <string name="email">Adresse email</string>
    <string name="password">Mot de passe</string>
    <string name="Address">Adresse postale</string>
    <string name="alreadyRegister">Vous possédez déjà un compte ?</string>
    <string name="alreadyRegisterButton">► Identifiez-vous</string>
    <string name="fillAllInput">Veuillez remplir tous les champs.</string>
    <string name="notSamePassword">Les mots de passe ne correspondent pas.</string>
    <string name="ivalidLogin">Identifiants invalides.</string>
    <string name="connected">Vous êtes identifié !</string>
    <string name="login">Connexion</string>
    <string name="alreadyLogin">Pas encore inscrit ?</string>
    <string name="alreadyLoginButton">► Créer votre compte</string>
    <string name="passwordConfirm">Confirmation du mot de passe</string>
    <string name="goHomme">Retour au menu principal</string>
    <string name="our">Nos</string>
    <string name="total">Total :</string>
    <string name="basketEmpty">Votre panier est vide...</string>
    <string name="ok">OK</string>
    <string name="oups">Oups !</string>
    <string name="devise">€</string>
    <string name="cannotGetList">Impossible de récupérer la liste des</string>
    <string name="notFound">introuvables</string>
    <string name="maxOrder">Vous pouvez commander au maximum</string>
    <string name="one">Un(e)</string>
    <string name="addToBasket">ajouté(e) au panier !</string>
    <string name="thanks">Merci !</string>
    <string name="orderSuccess">Votre commande est passée, venez la récupérer dans 1h.</string>
    <string name="orderError">Une erreur est survenue lors du passage de la commande.</string>
</resources>