<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/mainOutdoorPic"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/mainStarterPic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/outdoorpic" />

    <TextView
        android:id="@+id/mainWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:shadowColor="@color/black"
        android:shadowRadius="10"
        android:text="@string/main_welcome"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/entsani"
        android:shadowColor="@color/black"
        android:shadowDx="-2"
        android:shadowDy="2"
        android:shadowRadius="10"
        android:text="@string/main_title"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainToquePic" />

    <ImageView
        android:id="@+id/mainToquePic"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/mainTitle"
        app:layout_constraintEnd_toEndOf="@+id/mainTitle"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@+id/mainTitle"
        app:layout_constraintTop_toBottomOf="@+id/mainWelcome"
        app:srcCompat="@drawable/toque"
        tools:srcCompat="@drawable/toque" />

    <ImageView
        android:id="@+id/mainHandPic"
        android:layout_width="60dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="@+id/mainTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/mainTitle"
        app:layout_constraintTop_toTopOf="@+id/mainTitle"
        app:srcCompat="@drawable/hand"
        tools:srcCompat="@drawable/hand" />

    <ImageView
        android:id="@+id/mainStarterPic"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:hapticFeedbackEnabled="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/mainCoursePic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainTitle"
        app:srcCompat="@drawable/starter" />

    <TextView
        android:id="@+id/mainStarterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:shadowColor="@color/black"
        android:shadowRadius="10"
        android:text="@string/starter_button"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/mainStarterPic"
        app:layout_constraintEnd_toEndOf="@id/mainStarterPic"
        app:layout_constraintStart_toStartOf="@+id/mainStarterPic"
        app:layout_constraintTop_toTopOf="@+id/mainStarterPic" />

    <ImageView
        android:id="@+id/mainCoursePic"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:hapticFeedbackEnabled="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/mainDessertPic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainStarterPic"
        app:srcCompat="@drawable/main_course" />

    <TextView
        android:id="@+id/mainCourseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/black"
        android:shadowRadius="10"
        android:text="@string/main_course_button"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/mainCoursePic"
        app:layout_constraintEnd_toEndOf="@id/mainCoursePic"
        app:layout_constraintStart_toStartOf="@id/mainCoursePic"
        app:layout_constraintTop_toTopOf="@id/mainCoursePic" />

    <ImageView
        android:id="@+id/mainDessertPic"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:hapticFeedbackEnabled="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainCoursePic"
        app:srcCompat="@drawable/dessert" />

    <TextView
        android:id="@+id/mainDessertText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/black"
        android:shadowRadius="10"
        android:text="@string/dessert_button"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/mainDessertPic"
        app:layout_constraintEnd_toEndOf="@id/mainDessertPic"
        app:layout_constraintStart_toStartOf="@id/mainDessertPic"
        app:layout_constraintTop_toTopOf="@id/mainDessertPic" />

</androidx.constraintlayout.widget.ConstraintLayout>